# epic

./: .gitignore  README.md  dev.db  pyproject.toml
.github/workflows/: deploy.yml  publish-client.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial_tables.py  0002_contest_owned_sessions.py  0003_contest_description_visibility.py  0004_contest_registrations.py  0005_submissions.py  0006_scores_and_forecasting_contests.py  0007_leaderboard_entries.py  0008_contest_created_by_user_fk.py  0009_contest_config_without_scenarios.py  0010_tasks_table.py  0011_drop_task_columns_from_contests.py  0012_two_phase_contest_fields.py  0013_drop_prediction_from_sequence.py  0014_ground_truth_column.py  0015_user_registration_workflow.py
assets/diagrams/: epic-architecture.excalidraw
docs/: api-specification.md  architecture.md  authentication.md  codex-tasks.md  configuration.md  contest-authoring.md  contest-management.md  contest.md  datasets.md  digital-twins.md  domain-model.md  epic-architecture.excalidraw  error-handling.md  faults.md  plugin-registry.md  plugin-system.md  quantities.md  scoring.md  sensors.md  simulation-engine.md  testing.md  twin-catalog.md
epic/: __init__.py
epic/api/: dependencies.py  email_service.py  errors.py  main.py  utils.py
epic/core/: auth.py  broadcaster.py  engine.py  evaluators.py  exceptions.py  interfaces.py  registry.py  scoring.py  session_tasks.py  testing.py
epic/gui/: admin.js  api.js  app.js  auth.js  auth_flow.js  contest_management.js  formatters.js  index.html  monitor.js  organizer.js  package-lock.json  package.json  participant.js  state.js
epic/sensors/: acceleration.py  base.py  co2_concentration.py  current.py  flow_rate.py  humidity.py  occupancy.py  plugin.py  position.py  power.py  pressure.py  rotational_speed.py  temperature.py  velocity.py  vibration.py  voltage.py
epic/twins/: README.md  __init__.py
epic_api/: __init__.py  dependencies.py  email_service.py  errors.py  main.py  schemas.py  templates.py  utils.py
epic_api/email_templates/: contest_created.txt  organizer_request_received.txt  session_auto_paused.txt  submission_window_open.txt
epic_api/routers/: auth.py  catalog.py  contests.py  invitations.py  leaderboard.py  organizer_requests.py  registrations.py  sessions.py  submissions.py  templates.py  twins.py  users.py  ws.py
epic_client/: README.md  client.py  pyproject.toml
epic_client/epic_client/: __init__.py  client.py
epic_client/notebooks/: quickstart.ipynb
epic_client/tests/: test_client.py
epic_core/: __init__.py  auth.py  broadcaster.py  config.py  engine.py  evaluators.py  exceptions.py  interfaces.py  notifications.py  quantities.py  registry.py  scoring.py  testing.py
epic_core/api/: dependencies.py  email_service.py  errors.py  main.py  schemas.py  utils.py
epic_core/db/: base.py  bootstrap.py  models.py  session.py
epic_core/gui/: index.html  vite.config.js
epic_core/kernel/: auth.py  broadcaster.py  engine.py  evaluators.py  interfaces.py  notifications.py  quantities.py  registry.py  scoring.py  session_tasks.py  testing.py
epic_gui/: index.html
epic_plugins/metrics/: f1.py  mae.py  plugin.py
epic_sensors/: __init__.py  acceleration.py  base.py  co2_concentration.py  current.py  flow_rate.py  humidity.py  occupancy.py  plugin.py  position.py  power.py  pressure.py  rotational_speed.py  temperature.py  velocity.py  vibration.py  voltage.py
notebooks/: mass_spring_damper_forecasting.ipynb  quickstart.ipynb
tests/: __init__.py
(+174 files in other folders)
