[project]
name = "epic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite",
    "alembic",
    "bcrypt>=3.2,<4.1",
    "fastapi",
    "numpy",
    "passlib[bcrypt]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]",
    "websockets",
]

[tool.setuptools.packages.find]
include = ["epic_api*", "epic_client*", "epic_core*", "epic_sensors*", "epic_twins*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
norecursedirs = ["epic_client"]

[dependency-groups]
dev = [
    "httpx2",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "requests>=2.34.2",
    "websocket-client>=1.9.0",
]
