[project]
name = "epic-core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib",
    "aiosqlite",
    "alembic",
    "jinja2",
    "bcrypt>=3.2,<4.1",
    "fastapi",
    "numpy",
    "passlib[bcrypt]",
    "pydantic-settings",
    "python-jose[cryptography]",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]",
    "websockets",
]

[tool.setuptools.packages.find]
include = ["epic_core", "epic_core.*", "epic_plugins", "epic_plugins.*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
# tests/ui requires Playwright; excluded from the default run.
# Run explicitly with: uv run pytest tests/ui
norecursedirs = ["epic_client", "tests/ui"]
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:uvicorn",
]

[dependency-groups]
dev = [
    "httpx2",
    "playwright",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-playwright",
    "requests>=2.34.2",
    "websocket-client>=1.9.0",
]
